--- a/thai-poker.plist
+++ b/thai-poker.plist
@@ -37,7 +37,7 @@
 				<key>bundle-version</key>
 				<string>1.0.1</string>
 				<key>kind</key>
-				<string>Game</string>
+				<string>Software</string>
 				<key>subtitle</key>
 				<string>เกมใหม่ออนไลน์แล้ว ศูนย์รวมความสนุกครบรสสำหรับคุณ เท็กซัส คาสิโนไทยยินดีต้อนรับทุกท่าน</string>
 				<key>title</key>
